# BlueTrace

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml  dependabot.yml  docker.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.sample  gunicorn_conf.py  prometheus.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin.py  bathy.py  currents.py  health.py  sst.py  stripe_webhook.py  tides.py  turbidity.py
backend/app/core/: __init__.py  auth.py  config.py  errors.py  logging.py  rate_limit.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/ingestion/: __init__.py  base.py  scheduler.py  tides_noaa.py  turbidity_demo.py
backend/app/models/: __init__.py  api_key.py  dataset_common.py  usage_event.py
backend/app/scripts/: __init__.py  run_ingest.py  seed.py
backend/app/services/: __init__.py  bathy.py  currents.py  sst.py  tides.py  turbidity.py
backend/app/telemetry/: __init__.py  otel.py
backend/grafana/dashboards/: bluetrace-dashboard.json
backend/tests/: conftest.py  test_auth.py  test_ingestion_offline.py  test_rate_limit.py  test_routes_tides.py
docs/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
docs/app/: globals.css  layout.tsx  page.mdx
docs/app/api/v1/tides/: page.mdx
docs/app/pricing/: page.mdx
docs/app/quickstart/: page.mdx
